STANBOL-962: added antrun configuration to pom and nbactions.xml file
git-svn-id: https://svn.apache.org/repos/asf/stanbol/trunk@1450028 13f79535-47bb-0310-9956-ffa450edef68